@@ -1,10 +1,11 @@
 /**
-Lov Box
-
-Used in showParams.jsp page to display lov parameters and chained parameter fields
-
-When     Who  What
-20070918 john added line to compare with default value (line ~109)
+ * Lov Box
+ *
+ * Used in showParams.jsp page to display lov parameters and chained parameter
+ * fields
+ *
+ * When Who What 20070918 john added line to compare with default value (line
+ * ~109)
  */
 package art.params;
 
@@ -15,210 +16,216 @@ import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 /**
- * Class to display either inline or multi parameters that use LOVs, or chained parameters.
- * 
+ * Class to display either inline or multi parameters that use LOVs, or chained
+ * parameters.
+ *
  * @author Enrico Liboni
  * @author John
  * @author Timothy Anyona
  */
 public class HtmlLovParam implements ParamInterface {
-    
-    final static Logger logger = LoggerFactory.getLogger(HtmlLovParam.class);
-    
-    String username, paramHtmlId, paramHtmlName, paramName, paramShortDescr, paramDescr, defaultValue, chainedParamId;
-    boolean useRules;
-    boolean isMulti = false;
-    int lovQueryId;
-    String chainedValueId;
+
+	final static Logger logger = LoggerFactory.getLogger(HtmlLovParam.class);
+	String username, paramHtmlId, paramHtmlName, paramName, paramShortDescr, paramDescr, defaultValue, chainedParamId;
+	boolean useRules;
+	boolean isMulti = false;
+	int lovQueryId;
+	String chainedValueId;
 	ResourceBundle messages;
 
-    /**
-     * Constructor.
-     * 
-     * @param paramHtmlId id of html element
-     * @param paramHtmlName name of html element
-     * @param paramName user friendly name of parameter
-     * @param paramShortDescr short description of parameter
-     * @param paramDescr description of parameter
-     * @param defaultValue default value
-     * @param lovQueryId query id for the lov
-     * @param chainedParamId html object id of the parameter that will trigger this one
-     * @param useSmartRules determine if rules should be applied to the lov query
-     * @param username user that is running the query
-     * @param chainedValueId html object id of the parameter whose value this one is based on
-     */
-    public HtmlLovParam(String paramHtmlId, String paramHtmlName, String paramName, String paramShortDescr, String paramDescr, String defaultValue, int lovQueryId, String chainedParamId, boolean useSmartRules, String username, String chainedValueId) {
+	/**
+	 * Constructor.
+	 *
+	 * @param paramHtmlId id of html element
+	 * @param paramHtmlName name of html element
+	 * @param paramName user friendly name of parameter
+	 * @param paramShortDescr short description of parameter
+	 * @param paramDescr description of parameter
+	 * @param defaultValue default value
+	 * @param lovQueryId query id for the lov
+	 * @param chainedParamId html object id of the parameter that will trigger
+	 * this one
+	 * @param useSmartRules determine if rules should be applied to the lov
+	 * query
+	 * @param username user that is running the query
+	 * @param chainedValueId html object id of the parameter whose value this
+	 * one is based on
+	 */
+	public HtmlLovParam(String paramHtmlId, String paramHtmlName, String paramName, String paramShortDescr, String paramDescr, String defaultValue, int lovQueryId, String chainedParamId, boolean useSmartRules, String username, String chainedValueId) {
 
-        this.paramHtmlId = paramHtmlId;
-        this.paramHtmlName = paramHtmlName;
-        this.paramName = paramName;
-        this.paramShortDescr = paramShortDescr;
-        this.paramDescr = paramDescr;
-        this.defaultValue = defaultValue;
-        this.lovQueryId = lovQueryId;
-        this.chainedParamId = chainedParamId;
-        this.useRules = useSmartRules;
-        this.username = username;
-        this.chainedValueId = chainedValueId;
+		this.paramHtmlId = paramHtmlId;
+		this.paramHtmlName = paramHtmlName;
+		this.paramName = paramName;
+		this.paramShortDescr = paramShortDescr;
+		this.paramDescr = paramDescr;
+		this.defaultValue = defaultValue;
+		this.lovQueryId = lovQueryId;
+		this.chainedParamId = chainedParamId;
+		this.useRules = useSmartRules;
+		this.username = username;
+		this.chainedValueId = chainedValueId;
 
-        if (defaultValue == null || defaultValue.equals("null")) {
-            this.defaultValue = "";
-        }
-
-        if (paramHtmlName.startsWith("M_")) {
-            isMulti = true;
-        }
-    }
-
-    @Override
-    public String getChainedValueId() {
-        return chainedValueId;
-    }
-
-    @Override
-    public String getId() {
-        return paramHtmlId;
-    }
-
-    @Override
-    public String getHtmlName() {
-        return paramHtmlName;
-    }
-
-    @Override
-    public String getName() {
-        return paramName;
-    }
-	
-	@Override
-    public String getValueBox() {
-        return getValueBox(defaultValue);
-    }
-
-    @Override
-    public String getValueBox(String value) {
-        String vBox;
-
-        if (chainedParamId != null) {
-            //ajaxed
-            vBox = "\n<select id=\"" + paramHtmlId + "\" name=\"" + paramHtmlName + "\" " + (isMulti ? "size=\"5\" multiple" : "") + "><option value=\"\">...</option></select>";
-        } else {
-            vBox = getValues(value);
-        }
-
-        return vBox;
-    }
-
-    @Override
-    public boolean isChained() {
-        if (chainedParamId != null) {
-            return true;
-        } else {
-            return false;
-        }
-    }
-
-    @Override
-    public String getChainedId() {
-        return chainedParamId;
-    }
-
-    /** 
-     * Returns the lov query id for ajax.
-     * @return the lov query id
-     */
-    @Override
-    public String getParamClass() {
-        return "" + lovQueryId;
-    }
-
-    @Override
-    public String getShortDescr() {
-        return paramShortDescr;
-    }
-
-    @Override
-    public String getDescr() {
-        return paramDescr;
-    }
-
-    /**
-     * Get the html code required for capturing a non-chained parameter.
-     * @return the html code required for capturing a non-chained parameter.
-     */
-    private String getValues(String initialValue) {
-        String values = "";
-		
-		if(initialValue==null){
-			//no parameter value override. use default value
-			initialValue=defaultValue;
+		if (defaultValue == null || defaultValue.equals("null")) {
+			this.defaultValue = "";
 		}
 
-        PreparedQuery pq = null;
+		if (paramHtmlName.startsWith("M_")) {
+			isMulti = true;
+		}
+	}
 
-        try {
-            pq = new PreparedQuery();
-            pq.setUsername(username); //in case lov should use rules
-            pq.setQueryId(lovQueryId);
-                                    
-            String selected;
-            String value;
-            String viewColumnValue;
+	@Override
+	public String getChainedValueId() {
+		return chainedValueId;
+	}
 
-            StringBuilder sb = new StringBuilder(1024);
-            sb.append("\n<select "
-                    + " id=\"" + paramHtmlId + "\""
-                    + " name=\"" + paramHtmlName + "\" " + (isMulti ? "size=\"5\" multiple" : "") + ">");
-            if (isMulti) {
-				if(StringUtils.equals(initialValue, "ALL_ITEMS") || StringUtils.equals(initialValue, "All")){                
-                    selected = "selected";
-                } else {
-                    selected = "";
-                }
-				String allString="All";
-				if(messages!=null){
-					allString=messages.getString("allItems");
+	@Override
+	public String getId() {
+		return paramHtmlId;
+	}
+
+	@Override
+	public String getHtmlName() {
+		return paramHtmlName;
+	}
+
+	@Override
+	public String getName() {
+		return paramName;
+	}
+
+	@Override
+	public String getValueBox() {
+		return getValueBox(defaultValue);
+	}
+
+	@Override
+	public String getValueBox(String value) {
+		String vBox;
+
+		if (chainedParamId != null) {
+			//ajaxed
+			vBox = "\n<select id=\"" + paramHtmlId + "\" name=\"" + paramHtmlName + "\" " + (isMulti ? "size=\"5\" multiple" : "") + "><option value=\"\">...</option></select>";
+		} else {
+			vBox = getValues(value);
+		}
+
+		return vBox;
+	}
+
+	@Override
+	public boolean isChained() {
+		if (chainedParamId != null) {
+			return true;
+		} else {
+			return false;
+		}
+	}
+
+	@Override
+	public String getChainedId() {
+		return chainedParamId;
+	}
+
+	/**
+	 * Returns the lov query id for ajax.
+	 *
+	 * @return the lov query id
+	 */
+	@Override
+	public String getParamClass() {
+		return "" + lovQueryId;
+	}
+
+	@Override
+	public String getShortDescr() {
+		return paramShortDescr;
+	}
+
+	@Override
+	public String getDescr() {
+		return paramDescr;
+	}
+
+	/**
+	 * Get the html code required for capturing a non-chained parameter.
+	 *
+	 * @return the html code required for capturing a non-chained parameter.
+	 */
+	private String getValues(String initialValue) {
+		String values = "";
+
+		if (initialValue == null) {
+			//no parameter value override. use default value
+			initialValue = defaultValue;
+		}
+
+		PreparedQuery pq = null;
+
+		try {
+			pq = new PreparedQuery();
+			pq.setUsername(username); //in case lov should use rules
+			pq.setQueryId(lovQueryId);
+
+			String selected;
+			String value;
+			String viewColumnValue;
+
+			StringBuilder sb = new StringBuilder(1024);
+			sb.append("\n<select "
+					+ " id=\"" + paramHtmlId + "\""
+					+ " name=\"" + paramHtmlName + "\" " + (isMulti ? "size=\"5\" multiple" : "") + ">");
+			if (isMulti) {
+				if (StringUtils.equals(initialValue, "ALL_ITEMS") || StringUtils.equals(initialValue, "All")) {
+					selected = "selected";
+				} else {
+					selected = "";
 				}
-                sb.append("<option value=\"ALL_ITEMS\" " + selected + ">" + allString + "</option>");
-            }
+				String allString = "All";
+				if (messages != null) {
+					allString = messages.getString("allItems");
+				}
+				sb.append("<option value=\"ALL_ITEMS\" " + selected + ">" + allString + "</option>");
+			}
 
-            Map<String,String> lov = pq.executeLovQuery(useRules); //override lov use rules setting with setting defined in the parameter definition
-            for (Map.Entry<String, String> entry : lov.entrySet()) {
-                // build html option list
-                value = entry.getKey();
-                viewColumnValue = entry.getValue();
-                
-				if(StringUtils.equals(initialValue, viewColumnValue) || StringUtils.equals(initialValue, value) ) {                
-                    selected = "selected";
-                } else {
-                    selected = "";
-                }
-                sb.append("<option value=\"");
-                sb.append(value);
-                sb.append("\" ");
-                sb.append(selected);
-                sb.append(">");
-                sb.append(viewColumnValue);
-                sb.append("</option>");
-            }
-            
-            sb.append("\n</select>\n");
-            values = sb.toString();
+			Map<String, String> lov = pq.executeLovQuery(useRules); //override lov use rules setting with setting defined in the parameter definition
+			for (Map.Entry<String, String> entry : lov.entrySet()) {
+				// build html option list
+				value = entry.getKey();
+				viewColumnValue = entry.getValue();
 
-        } catch (Exception e) {
-            values = "Error: " + e;
-            logger.error("Error",e);
-        } finally {
-            pq.close();
-        }
+				if (StringUtils.equals(initialValue, viewColumnValue) || StringUtils.equals(initialValue, value)) {
+					selected = "selected";
+				} else {
+					selected = "";
+				}
+				sb.append("<option value=\"");
+				sb.append(value);
+				sb.append("\" ");
+				sb.append(selected);
+				sb.append(">");
+				sb.append(viewColumnValue);
+				sb.append("</option>");
+			}
 
-        return values;
-    }
+			sb.append("\n</select>\n");
+			values = sb.toString();
+			
+		} catch (Exception e) {
+			values = "Error: " + e;
+			logger.error("Error", e);
+		} finally {
+			if (pq != null) {
+				pq.close();
+			}
+		}
+
+		return values;
+	}
 
 	@Override
 	public void setMessages(ResourceBundle msgs) {
-		messages=msgs;
+		messages = msgs;
 	}
 }
